--- a/landing.html
+++ b/landing.html
@@ -6,15 +6,21 @@
   </head>
   <body>
     <header>
-      <h1>PlatziGames</h1><a class="boton">Registro</a>
+      <h1>PlatziGames</h1><a>Hola Memo</a>
     </header>
     <section class="intro">
       <div class="intro__imagen"><img src="images/imagen.png"/></div>
       <div class="intro__contenido"> 
-        <h2>Título Principal </h2>
+        <h2>Título principal</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate fugiat, earum eos aperiam eaque esse odit quis. </p>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing. </p><a class="boton">Leer más</a>
       </div>
     </section>
+    <ul>
+      <li>Título principal</li>
+      <li>Subtítulo 1</li>
+      <li>Subtítulo 2</li>
+      <li>Subtítulo 3</li>
+    </ul>
   </body>
 </html>
