--- a/landing.html
+++ b/landing.html
@@ -1,13 +1,12 @@
-<!DOCTYPE html >
+
+<!-- -var usuario = "Memo"--><!DOCTYPE html >
 <html>
   <head>
     <meta charset="UTF-8"/>
     <link rel="stylesheet" href="css/ejercicio-pug.css"/>
   </head>
   <body>
-    <header>
-      <h1>PlatziGames</h1><a>Hola Memo</a>
-    </header>
+    <!-- -var usuario = "Memo"-->
     <section class="intro">
       <div class="intro__imagen"><img src="images/imagen.png"/></div>
       <div class="intro__contenido"> 
@@ -17,27 +16,35 @@
       </div>
     </section>
     <main class="contenido">
-      <div class="caja">
-        <div class="caja__imagen"><img src="images/imagen.png"/></div>
-        <div class="caja__contenido"> 
-          <h3>Subtítulo 1</h3>
-          <p>Lorem Ipsum whatever</p><a class="buton">Leer más</a>
-        </div>
-      </div>
-      <div class="caja">
-        <div class="caja__imagen"><img src="images/imagen.png"/></div>
-        <div class="caja__contenido"> 
-          <h3>Subtítulo 2</h3>
-          <p>Lorem Ipsum whatever</p><a class="buton">Leer más</a>
-        </div>
-      </div>
-      <div class="caja">
-        <div class="caja__imagen"><img src="images/imagen.png"/></div>
-        <div class="caja__contenido"> 
-          <h3>Subtítulo 3</h3>
-          <p>Lorem Ipsum whatever</p><a class="buton">Leer más</a>
-        </div>
-      </div>
+          <div class="caja">
+            <div class="caja__imagen"><img src="images/imagen.png"/></div>
+            <div class="caja__contenido"> 
+              <h3>Subtítulo 1</h3>
+              <p>Lorem Ipsum whatever</p>
+            </div>
+          </div>
+          <div class="caja">
+            <div class="caja__imagen"><img src="images/imagen.png"/></div>
+            <div class="caja__contenido"> 
+              <h3>Subtítulo 2</h3>
+              <p>Lorem Ipsum whatever</p>
+            </div>
+          </div>
+          <div class="caja">
+            <div class="caja__imagen"><img src="images/imagen.png"/></div>
+            <div class="caja__contenido"> 
+              <h3>Subtítulo 3</h3>
+              <p>Lorem Ipsum whatever</p>
+            </div>
+          </div>
     </main>
+    <footer> 
+      <h1>PlatziGames </h1>
+      <ul>
+        <li>Acerca</li>
+        <li>Noticias</li>
+        <li>Contacto</li>
+      </ul>
+    </footer>
   </body>
 </html>
